plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'groovy'
	id 'jacoco'
	id 'org.sonarqube' version '3.4.0.2513'
}

group = 'pl.mlisowski'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.auth0:java-jwt:4.0.0'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation group: 'org.spockframework', name: 'spock-spring', version: '2.2-M1-groovy-3.0'
	testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.2-M1-groovy-3.0'
	implementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner:3.1.3'
}

tasks.named('test') {
	useJUnitPlatform()
}

jacocoTestReport {
	reports {
		xml.enabled true
	}
}

sonarqube {
	properties {
		property 'sonar.tests', 'src/test/groovy, src/test/java'
		property 'sonar.host.url', 'http://localhost:9000'
		property 'sonar.projectKey', 'ProjectManagement'
		property 'sonar.login', 'sqp_667f83f1fa2339826a6f76f63b885282ae0844ba'
	}
}

tasks.named('sonarqube').configure {
	dependsOn test
}

test.finalizedBy jacocoTestReport
